develop/traefik/gateway-http-8980.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: traefik-gateway
  namespace: traefik
spec:
  gatewayClassName: traefik
  listeners:
    - name: webui
      protocol: HTTP
      port: 8980
      allowedRoutes:
        namespaces:
          from: All
